--- a/pwk-2020.md
+++ b/pwk-2020.md
@@ -1,7 +1,7 @@
 
 # OSCP - PWK 2020 (Penetration testing With Kali) NOTES
 OSCP Notes which covers whole PWK 2020 Course Curriculum 
-> Pushpender | 14th May 2020
+> Author: Pushpender Singh
 
 ## Table of Content
 - [Getting Comfortable With Kali Linux](#getting-comfortable-with-kali-linux)
