--- a/pwk-2020.md
+++ b/pwk-2020.md
@@ -137,4 +137,68 @@ Contains Application Support & Data Files : /usr/share/
 	```
 	
 	-	Finding Files In Kali Linux
+		---------------------------------------------------------------------------------------------------------------------------
+	
+	-	`which` command: Searches the File in directory defined in $PATH: `echo $PATH`
+		`which sdb`
+		
+	-	`locate` command: Quickest Way to find file & directories within the FileSystem
+	
+		-	Uses `locate.db` to find the file or directory which is updated on a regular basis using Cron Scheduler.
+		
+		-	Database can be manually updated using this command: `sudo updatedb`
+		
+		-   Searching file using locate: `locate sdb.exe`
+		
+	-	`find` command: Most Complex & Flexible Search Tool among the 3
+
+		-   Searching a file from Root path that starts with sdb: `find / -name sdb*`
+
+	-	Managing Kali Linux Services
+		---------------------------------------------------------------------------------------------------------------------------	
+		
+	-	SSH Service: TCP based & listen by default on port 22
+		
+		-	Start SSH Service: `sudo systemctl start ssh`
+		
+		-	Verifying Whether SSH Service running or not: `sudo ss -antlp | grep sshd
+		
+		-   Start SSH Service on Boot: `sudo systemctl enable ssh`
+		
+	- 	HTTP Service: TCP based & listen by default on port 80
+	
+		-	Start Apache2 Service: `sudo systemctl start apache2`
+		
+		-	Verifying Whether Apache2 Service running or not: `sudo ss -antlp | grep sshd
+		
+		-   Start Apache2 Service on Boot: `sudo systemctl enable apache2`	
+		
+	-   To See Table of All Available Services: `systemctl list-unit-files`
+
+	-	Searching, Installing & Removing Tools
+		---------------------------------------------------------------------------------------------------------------------------		
+		
+	-	Aptitude Manager: Used to install, remove, upgrade tools on debian based systemctl
+
+		-	Updating Aptitude Manager: `sudo apt update`
+		
+		-	Updating Installed Packages & Core System Tools to latest versions: `sudo apt upgrade`
+		
+		-	Updating Single Package (such as metasploit-framework): `sudo apt upgrade metasploit-framework`
+		
+		-	`apt-cache search`: Used to search whether a package is available in Kali repository
+		`apt-cache search pure-ftpd`
+		
+		-	`apt show`: Used to echo/display description of a package, e.g. `apt show resource-agents | less`
+		
+		-	`apt install`: Used to Install Package, e.g. `sudo apt install pure-ftpd`
+		
+		-	`apt remove --purge`: Used to Completely Remove Tool/Package from kali, e.g. `sudo apt remove --purge pure-ftpd`
+		
+	-	`dpkg`: Core tool used to install package either directly or indirectly through apt
+
+		-	prefered for offline package installation: `sudo dpkg -i ./nano_3.2-2_amd64.deb`
+		
+Command Line Fun
+========================================================================================================	
 	
