--- a/pwk-2020.md
+++ b/pwk-2020.md
@@ -45,10 +45,10 @@ Getting Comfortable With Kali Linux
 	
 -	The Linux FileSystem	
 ```
-Contains Basic Programs (such as **ls**, **cat**): /bin/
-Contains Basic Programs (such as **ls**, **cat**): /bin/
+Contains Basic Programs (such as ls, cat): /bin/
+Contains Basic Programs (such as fdisk, makefs): /sbin/
 Contains Temporary Files, typically deleted on boot : /tmp/
-Contains Application (such as **apt**, **nmap**): /usr/bin/
+Contains Application (such as apt, nmap): /usr/bin/
 Contains Application Support & Data Files : /usr/share/
 ```
 	
