--- a/pwk-2020.md
+++ b/pwk-2020.md
@@ -5,6 +5,7 @@ OSCP Notes which covers whole PWK 2020 Course Curriculum
 
 ## Table of Content
 - [Getting Comfortable With Kali Linux](#getting-comfortable-with-kali-linux)
+- [Command Line Fun](#command-line-fun)
 
 
 Getting Comfortable With Kali Linux
