Update 2. Command Line Fun.md

--- a/2020/2. Command Line Fun.md
+++ b/2020/2. Command Line Fun.md
@@ -15,100 +15,114 @@ Environment Variables
 4. PWD  : `kali@kali:~$ echo $PWD`
 
 ### Define Environment Variables using `export` cmd
-Let's say you don't want to type IP address repeatedly then you can export the $ip variable & can use it across terminal sessions
+* Let's say you don't want to type IP address repeatedly then you can export the `$ip` variable & can use it across terminal sessions
 ```
-export $ip=192.168.43.70
-ping -c 2 $ip
+kali@kali:~$ export $ip=192.168.43.70
+kali@kali:~$ ping -c 2 $ip
 ```
 
-Variables exported without `export` cmd are only accessible in that current bash session
+* Variables exported without `export` cmd are only accessible in that current bash session
 ```
-lol="Rasode Mein Kon Tha?"
-echo $lol    # We will get value of $lol
-bash 
-echo $lol    # No Value
-exit   
-echo $lol    # Again can access value of $lol
+kali@kali:~$ lol="Rasode Mein Kon Tha?"
+kali@kali:~$ echo $lol    # We will get value of $lol
+kali@kali:~$ bash 
+kali@kali:~$ echo $lol    # No Value
+kali@kali:~$ exit   
+kali@kali:~$ echo $lol    # Again can access value of $lol
 ```
-NOTE: Variables defined using `export` cmd can be accessed using different terminal window
+* **NOTE**: Variables defined using `export` cmd can be accessed using different terminal window
 
-Viewing Default Kali Linux Environment Variables: `env`
+* Viewing Default Kali Linux Environment Variables: `env`
 
-Tab Completion: Used in auto text completion. 
+Tab Completion
+--------------
+* Used in auto text completion. 
 
-Bash History Tricks: 
-We can see previous executed cmds using `history` cmd, 
+Bash History Tricks
+-------------------
+* We can see previous executed cmds using `history` cmd
 
-For executing last executed terminal cmd, use `!! ` double exclamation mark
+* For executing last executed terminal cmd, use `!!` double exclamation mark. 
 
-Bash terminal history is saved in `.bash_history` file in the user home directory: `tail -n 3 .bash_history`
+* Bash terminal history is saved in `.bash_history` file in the user home directory: `tail -n 3 .bash_history`
 
-Two Env Variables: 
-`$HISTSIZE` : Controls no. Of cmds stored in  memory for current terminal session
-`$HISTFILESIZE` : Controls How many cmds are kept in history file
+* Two Common Env Variables: 
+1. `$HISTSIZE` : Controls no. Of cmds stored in  memory for current terminal session. 
+2. `$HISTFILESIZE` : Controls How many cmds are kept in history file. 
 
-These 2 env variables can be edited acc. to are needs
+* These 2 env variables can be edited according to are needs. 
 
-Useful Keyboard Keys: 
-`Up ArrowKey`: Use to select/scroll previous cmds in Upwards direction. 
-`Down ArrowKey`: Use to select/scroll cmds in Downwards direction. 
-`CTRL + R`: Reverse I search facility, can search previously executed cmds using Cmd Search Feature. 
+Useful Keyboard Keys
+--------------------
+1. `Up ArrowKey`: Use to select/scroll previous cmds in Upwards direction. 
+2. `Down ArrowKey`: Use to select/scroll cmds in Downwards direction. 
+3. `CTRL + R`: Reverse I search facility, can search previously executed cmds using Cmd Search Feature. 
 
-Piping and Redirection: Every program executed from terminal has 3 streams connected to it that serves the communication channel to external env. 
-1. Standard Input (STDIN):  Data fed into the program. 
-2. Standard Output (STDOUT): Output from the program. (defaults to terminal) 
-3. Standard Error (STDERR):  Error message. (defaults to terminal) 
+Piping and Redirection
+----------------------
+* Every program executed from terminal has 3 streams connected to it that serves the communication channel to external env. 
+1. Standard Input (`STDIN`):  Data fed into the program. 
+2. Standard Output (`STDOUT`): Output from the program. (defaults to terminal) 
+3. Standard Error (`STDERR`):  Error message. (defaults to terminal) 
 
-Redirecting to a new file: 
-Redirecting output to non existing file will leads to file creation: `echo "Corona Go! Go Corona" > EminemRap.txt`
-Typical file reading: `cat EminemRap.txt`
+### Redirecting to a new file
 
-If file already exist, then that file will be overwritted: `echo "Selfie meinai leli aaj" > EminemRap.txt`
+* Redirecting output to a non existing file will leads to file creation: `kali@kali:~$ echo "Corona Go! Go Corona" > EminemRap.txt`
+Typical file reading: `kali@kali:~$ cat EminemRap.txt`
 
-Note: Be very careful while file redirection, there is no undo function. 
+* If file already exist, then that file will be overwritted: `kali@kali:~$ echo "Selfie meinai leli aaj" > EminemRap.txt`
 
-Redirecting to a existing file:
-Using `>>` sign to append data to a existing file: `echo "Chura ke dil mera goliya chali" >> EminemRap.txt`
+* **Note** : Be very careful while file redirection, there is no undo function. 
 
-Redirecting from a file:
-Use `<` sign to redirect file data to any utility:
-`wc -m < EminemRap.txt`
-Above cmd ==> Total words counting from a file. 
+### Redirecting to a existing file
+* Use `>>` sign to append data to a existing file: `kali@kali:~$ echo "Chura ke dil mera goliya chali" >> EminemRap.txt`
 
-Redirecting STDERR: We can redirect standard error of particular command using `2>`: `ls . /test 2>error.txt`
-Example error.txt content: `ls: cannot excess './test': No such file or directory`
+### Redirecting from a file
+* Use `<` sign to redirect file data to any utility: `kali@kali:~$ wc -m < EminemRap.txt`
+* Above cmd will count total words a file. 
 
-Piping: Redirecting output of one cmd as a input for another cmd: `cat error.txt | wc -m`
-ExampleOutput: 54
+### Redirecting STDERR
+* We can redirect standard error of particular command using `2>`: `kali@kali:~$ ls . /test 2>error.txt`
+* Example content of error.txt file: `ls: cannot excess './test': No such file or directory`
 
-`cat error.txt | wc -m > count.txt`
-`cat count.txt`
+### Piping
+* Redirecting output of one cmd as a input for another cmd: `kali@kali:~$ cat error.txt | wc -m`
+* Above cmd will perforn word count of `error.txt` file. 
 
-Text Searching and Manipulation: 
-`grep`: Searches text file for given regex & outputs any line containing a match to stdout (stdout == usually terminal) 
-Example: `ls -la /usr/bin | grep zip`
-Use `man` cmd to learn more about `grep`
+`kali@kali:~$ cat error.txt | wc -m > count.txt`
+`kali@kali:~$ cat count.txt`
 
-`sed`: Powerful stream editor + very complex. It performs text editing in stream of text. 
-Example: `echo "Go Katrina! Go" | sed 's/Katrina/Corona/' `
-Example Output: `Go Corona! Go`
+Text Searching and Manipulation
+-------------------------------
+### `grep`
+* Searches text file for given regex & outputs any line containing a match to stdout (stdout == usually terminal) 
+* Example: `kali@kali:~$ ls -la /usr/bin | grep zip`
+* Use `man` cmd to learn more about `grep`
 
-`cut`: Used to cut a stdout of one cmd to pieces on the basic of given delimiter, then it also be used to select a particular part of string. Commonly used flags: `-d` for Delimiter & `-f` for Field Selection. 
-Example: `echo rahul, saksham, rohit | cut -d "," -f 2`
-Example Output: `saksham`
+### `sed`
+* Powerful stream editor + very complex. It performs text editing in stream of text. 
+* Example: `kali@kali:~$ echo "Go Katrina! Go" | sed 's/Katrina/Corona/' `
+* Example Output: `Go Corona! Go`
 
-Extracting list of users from etc/passed file: `cut -d ":" -f 1 /etc/passwd `
+### `cut`
+* Used to cut a stdout of one cmd to pieces on the basic of given delimiter, then it also be used to select a particular part of string. 
+* Commonly used flags: `-d` for Delimiter & `-f` for Field Selection. 
+* Example: `kali@kali:~$ echo rahul, saksham, rohit | cut -d "," -f 2`
+* Example Output: `saksham`
+* Extracting list of users from etc/passed file: `kali@kali:~$ cut -d ":" -f 1 /etc/passwd `
 
-`awk`: Programming language designed for text processing. Typically used for data extraction and reporting tools. Only going to scratch the surface. 
+### `awk`
+* Programming language designed for text processing. 
+* Typically used for data extraction and reporting tools.
+* Only going to scratch the surface. 
+* Splitting stdout of one cmd using delimeter, Extracting 1st & 3rd part & then finally printing it: `kali@kali:~$ echo "hello::there::friends" | awk -F "::" '{print $1, $3}' `
+* Example Output: `hello, friends`
 
-Splitting stdout of one cmd using delimeter, Extracting 1st & 3rd part & then finally printing it: `echo "hello::there::friends" | awk -F "::" '{print $1, $3}' `
-
-Example Output: `hello, friends`
-
-Editing files from the Command Line: 
-1. `nano`: 
+Editing files from the Command Line
+-----------------------------------
+### `nano`
 * Opening file using `nano`: `nano anyfilename.txt`
-* Nano commands menu is located at the bottom
+* Nano commands menu is located at the bottom. 
 * Important Memorable cmds:
        - `CTRL + O` : Write changes to a file.
        - `CTRL + K` : To cut current line. 
@@ -116,7 +130,7 @@ Editing files from the Command Line:
        - `CTRL + W`: To search within a line. 
        - `CTRL + X` : Use to exit. 
 
-2. `vi` :
+### `vi` 
 * Opening file using `vi`: `vi anyfilename.txt`
 * Press `i` key to Escape Command Mode & start typing in text file. 
 * Press `esc` key in order to return back to Command Mode. 
@@ -128,7 +142,8 @@ Editing files from the Command Line:
 * Press `:q!` to quit without writing a file. 
 * Press `:wq!` to quickly save the file & quit `vi`
 
-Comparing Files:
+Comparing Files
+---------------
 `comm` : Compares two text file, displaying the line that are unique to each one as well those lines that are common. 
 Example File-A & File-B:
 ```
