Update 2. Command Line Fun.md

--- a/2020/2. Command Line Fun.md
+++ b/2020/2. Command Line Fun.md
@@ -144,8 +144,9 @@ Editing files from the Command Line
 
 Comparing Files
 ---------------
-`comm` : Compares two text file, displaying the line that are unique to each one as well those lines that are common. 
-Example File-A & File-B:
+### `comm`
+* Compares two text file, displaying the line that are unique to each one as well those lines that are common. 
+* Example File-A & File-B:
 ```
 kali@kali:~$ cat File-A.txt
 192.168.1.1
@@ -160,7 +161,8 @@ kali@kali:~$ cat File-B.txt
 192.168.1.5
 192.168.1.6
 ```
-File Comparison example using `comm`: 
+
+* File Comparison example using `comm`: 
 ```
 kali@kali:~$ comm File-A.txt File-B.txt
                                192.168.1.1
@@ -182,83 +184,104 @@ kali@kali:~$ comm -12 File-A.txt File-B.txt
 192.168.1.5
 ```
 
-`diff`: Compares difference b/w files similar to `comm`, but it is more complex & support many output formats. 
-Two famous Formats: 
-1. Context Format: `diff -c File-A.txt File-B.txt`
-2. Unified Format: `diff -u File-A.txt File-B.txt`
+### `diff`
+* Compares difference b/w files similar to `comm`, but it is more complex & support many output formats. 
+* Two famous Formats: 
+1. Context Format: `kali@kali:~$ diff -c File-A.txt File-B.txt`
+2. Unified Format: `kali@kali:~$ diff -u File-A.txt File-B.txt`
 
-`vimdiff`: It open vim (extended version of vi), with multiple files, one in each window. Difference b/w files is highlighted, making it easier to inspect them. 
-Useful shortcuts:
-* Press `CTRL + W + Arrow Key` for switching b/w windows
-* Press `] + C` will jump the cursor to next change in the diff. 
-* Press `[ + C` will jump it to the previous change. 
-* Press `D + O` will get a change in other window and put it in current window. 
-* Press `D + P` will put the change in other window from the current one. 
-* Press `:q!` for quitting vimdiff (Same shortcuts as vi) 
+### `vimdiff`
+* It open vim (extended version of vi), with multiple files, one in each window.
+* Difference b/w files is highlighted, making it easier to inspect them. 
 
-Managing Processes: Linux kernel manages multitasking through the use of process. 
-Kernel maintains info about each processes to help keep things organised. Each process is assigned a no. called `process id`
+- Useful shortcuts:
+    * Press `CTRL + W + Arrow Key` for switching b/w windows
+    * Press `] + C` will jump the cursor to next change in the diff. 
+    * `[ + C` will jump it to the previous change. 
+    * Press `D + O` will get a change in other window and put it in current window. 
+    * Press `D + P` will put the change in other window from the current one. 
+    * Press `:q!` for quitting vimdiff (Same shortcuts as vi) 
 
-Linux shell introduces the concept of `jobs` to ease our workflow during terminal session. For ex: `kali@kali:~$ cat errors.txt | wc -m` This whole cmd will be considered as one `job`. 
+Managing Processes
+------------------
+* Linux kernel manages multitasking through the use of process. 
+* Kernel maintains info about each processes to help keep things organised.
+* Each process is assigned a no. called `process id`
 
-`jobs` helps us to suspend or resume the execution of particular cmd
+* Linux shell introduces the concept of `jobs` to ease our workflow during terminal session. For ex: `kali@kali:~$ cat errors.txt | wc -m` This whole cmd will be considered as one `job`. 
 
-- Backgrounding Processes (bg) : Helps us to make the execution of cmd in background, leaving the shell free for further use. `&` sign at the end of a cmd, will put the cmd in bg. 
+* `jobs` helps us to suspend or resume the execution of particular cmd. 
 
-Ex: `ping -c 400 localhost > ping_result.txt &`
+### Backgrounding Processes (bg)
+* Helps us to make the execution of cmd in background, leaving the shell free for further use.
+* `&` sign at the end of a cmd, will put the cmd in bg. 
 
-* Stopping the execution of cmd using `CTRL + Z` and then type `bg` cmd will run the last cmd in background. Ex: `kali@kali:~$ bg`
+Ex: `kali@kali:~$ ping -c 400 localhost > ping_result.txt &`
 
-- Jobs Controls (jobs and fg) : 
+* Stopping the execution of cmd using `CTRL + Z` and then typing `bg` cmd will run the last cmd in background. Ex: `kali@kali:~$ bg`
+
+### Jobs Controls (jobs and fg) 
 * `jobs` utility list the jobs that are running in current terminal session. 
 * Running `fg %JOBNumber` returns a job in foreground. Example: `fg %1`
 * If only one job running in the bg, then typing `fg` without any additional flag will return that single job in the foreground. 
 
-- Process Control (ps and kill) : 
-`ps` : Process status, list all the running process in a Linux/Unix system, Swizz army knife for process management. 
-Listing all process with full format listing: `kali@kali:~$ ps -ef` where `-e` & `-f` stands for `select all processes` and `full format listing` respectively. 
+### Process Control (ps and kill) 
+* `ps` : Process status, list all the running process in a Linux/Unix system, Swizz army knife for process management. 
+* Listing all process with full format listing: `kali@kali:~$ ps -ef` where `-e` & `-f` stands for `select all processes` and `full format listing` respectively. 
 
-Finding process Id using command name: `kali@kali:~$ ps -fC leafpad`
+* Finding process Id using command name: `kali@kali:~$ ps -fC leafpad`
 
-Killing process using process id: `kali@kali:~$ kill ProcessID`
+* Killing process using process id: `kali@kali:~$ kill ProcessID`
 
-Verifying process termination using `ps`: `kali@kali:~$ ps -fC leafpad`
+* Verifying process termination using `ps`: `kali@kali:~$ ps -fC leafpad`
 
-File and Command Monitoring: 
-`tail` : 
-* Monitoring apache logs using tail: `sudo tail -f /var/log/apache2/access.log`
-* Extracting last `2` lines from file: `sudo tail -n2  /etc/lsb-release` where `2` is the desired no. of last lines. 
+File and Command Monitoring
+---------------------------
+### `tail` 
+* Monitoring apache logs using tail: `kali@kali:~$ sudo tail -f /var/log/apache2/access.log`
+* Extracting last `2` lines from file: `kali@kali:~$ sudo tail -n2  /etc/lsb-release` where `2` is the desired no. of last lines. 
 
-`watch`: Used to run designated cmd at regular intervals, by default it runs for every 2 seconds which could be changed using `-nX` flag where `X` is the interval in seconds. 
-Example (This cmd will list logged in users output from the `w` cmd once very 5 seconds) : `watch -n 5 w`
+### `watch`
+* Used to run designated cmd at regular intervals, by default it runs for every 2 seconds which could be changed using `-nX` flag where `X` is the interval in seconds. 
+* Example (This cmd will list logged in users output from the `w` cmd once very 5 seconds) : `kali@kali:~$ watch -n 5 w`
 
-Downloading Files: 
-`wget` : Utility to download file from the internet. Example (Downloading file & saving it with different name) : `wget -O lol.txt https://example.com/text file.txt`
-Refer to its docs for more info: `wget --help | less`
+Downloading Files
+-----------------
+### `wget` 
+* Utility to download file from the internet. 
+* Example (Downloading file & saving it with different name) : `kali@kali:~$ wget -O lol.txt https://example.com/text file.txt`
+* Refer to its docs for more info: `kali@kali:~$ wget --help | less`
 
-`curl` : Use to transfer data to and from a server using a host of protocol. Can be used to Download and Upload files & build complex request. 
-Example (Download & save file with different name) : `curl -o lol.txt https://example.com/textfile.txt`
-Very versatile tool, lots of use case scenarios & ample docs are available online. 
+### `curl` 
+* Use to transfer data to and from a server using a host of protocol.
+* Can be used to Download and Upload files & build complex request. 
+* Example (Download & save file with different name) : `kali@kali:~$ curl -o lol.txt https://example.com/textfile.txt`
+* Very versatile tool, lots of use case scenarios & ample docs are available online. 
 
-`axel` : It is Download accelerator that transfers a file from an FTP or HTTP server through multiple connections. It has vast variety of options. Common option: `axel -a -n 20 -o lol.pdf https://example.com/lol.pdf`
-`-a` : For more concise progress indicator. 
-`-n` : For no. Of multiple connections to use. 
-`-o` : For different output name. 
+### `axel` 
+* It is Download accelerator that transfers a file from an FTP or HTTP server through multiple connections. 
+* It has vast variety of options. Common option: `kali@kali:~$ axel -a -n 20 -o lol.pdf https://example.com/lol.pdf`
+* `-a` : For more concise progress indicator. 
+* `-n` : For no. Of multiple connections to use. 
+* `-o` : For different output name. 
 
-Extremely useful for downloading large file. 
+* Extremely useful for downloading large file. 
 
-Customizing the Bash Environment: 
-Bash History Customization: 
-* Whether or not to remove duplicate cmds: `export HISTCONTROL=ignoredups`
-* Filtering out basic cmds : `export HISTIGNORE="&:ls:[bf]g:exit:history"
-* For showing TimeFormat in history output cmd: `export HISTTIMEFORMAT="%F %T"`
-Other time format can be found in strftime man page: `man strfman`
+Customizing the Bash Environment
+--------------------------------
+### Bash History Customization
+* Whether or not to remove duplicate cmds: `kali@kali:~$ export HISTCONTROL=ignoredups`
+* Filtering out basic cmds : `kali@kali:~$ export HISTIGNORE="&:ls:[bf]g:exit:history"`
+* For showing TimeFormat in history output cmd: `kali@kali:~$ export HISTTIMEFORMAT="%F %T"`
+Other time format can be found in strftime man page: `kali@kali:~$ man strfman`
 
-Alias: Defining large cmd to shorter name 
-Example: `kali@kali:~$ alias lsa=ls -la`
-* We can see defined alias using `alias` cmd without giving any argument/flag.
+### Alias
+* Defining large cmd to shorter name 
+* Example: `kali@kali:~$ alias lsa=ls -la`
+* We can see defined alias using `kali@kali:~$ alias` cmd without giving any argument/flag.
 
-Persistent Bash Customization: Behavior of interactive shell in bash is determined by system's `/etc/bash.bashrc` file. 
+### Persistent Bash Customization
+* Behavior of interactive shell in bash is determined by system's `/etc/bash.bashrc` file. 
 * Editing this `bash.bashrc` bash file, will leads to persistent bash customization. 
 
 
