Update 2. Command Line Fun.md

--- a/2020/2. Command Line Fun.md
+++ b/2020/2. Command Line Fun.md
@@ -1,3 +1,9 @@
+## Table of Content
+- [Environment Variables](#environment-variables) 
+  * [Comman Environment Variables](#comman-environment-variables) 
+  * [Define Environment Variables using `export` cmd](#define-environment-variables-using-`export`-cmd) 
+
+
 Command Line Fun
 =================
 Introductory Look to Popular Linux Command Line Program
