Update 2. Command Line Fun.md

--- a/2020/2. Command Line Fun.md
+++ b/2020/2. Command Line Fun.md
@@ -1,8 +1,30 @@
 ## Table of Content
 - [Environment Variables](#environment-variables) 
   * [Comman Environment Variables](#comman-environment-variables) 
-  * [Define Environment Variables using `export` cmd](#define-environment-variables-using-`export`-cmd) 
-
+  * [Define Environment Variables using `export` cmd](#define-environment-variables-using-export-cmd) 
+- [Tab Completion](#tab-completion) 
+- [Bash History Tricks](#bash-history-tricks) 
+- [Useful Keyboard Keys](#useful-keyboard-keys) 
+- [Piping and Redirection](#piping-and-redirection) 
+  * [Redirecting to a new file](#redirecting-to-a-new-file) 
+  * [Redirecting to a existing file](#redirecting-to-a-existing-file) 
+  * [Redirecting from a file](#redirecting-from-a-file) 
+  * [Redirecting STDERR](#redirecting-stderr) 
+  * [Piping](#piping) 
+- [Text Searching and Manipulation](#text-searching-and-manipulation) 
+  * [`grep`](#grep) 
+  * [`see`](#sed) 
+  * [`cut`](#cut) 
+  * [`awk`](#awk) 
+- [Editing files from the Command Line](#editing-files-from-the-command-line) 
+  * [`nano`](#nano) 
+  * [`vi`](#vi) 
+- [Comparing Files](#comparing-files) 
+  * [`comm`](#comm) 
+  * [`diff`](#diff) 
+  * [`vimdiff`](#vimdiff) 
+- [Managing Processes](#managing-processes) 
+  * [Backgrounding Processes (bg)](#backgrounding-processes-(bg)) 
 
 Command Line Fun
 =================
