Update 2. Command Line Fun.md

--- a/2020/2. Command Line Fun.md
+++ b/2020/2. Command Line Fun.md
@@ -24,7 +24,20 @@
   * [`diff`](#diff) 
   * [`vimdiff`](#vimdiff) 
 - [Managing Processes](#managing-processes) 
-  * [Backgrounding Processes (bg)](#backgrounding-processes-(bg)) 
+  * [Backgrounding Processes (bg)](#backgrounding-processes-bg) 
+  * [Jobs Controls (jobs and fg)](#jobs-controls-jobs-and-fg)
+  * [Process Control (ps and kill)](#process-control-ps-and-kill)
+- [File and Command Monitoring](#file-and-command-monitoring) 
+  * [`tail`](#tail) 
+  * [`watch`](#watch) 
+- [Downloading Files](#downloading-files) 
+  * [`wget`](#wget) 
+  * [`curl`](#curl) 
+  * [`axel`](#axel) 
+- [Customizing the Bash Environment](#customizing-the-bash-environment) 
+  * [Bash History Customization](#bash-history-customization) 
+  * [Alias](#alias) 
+  * [Persistent Bash Customization](#persistent-bash-customization)
 
 Command Line Fun
 =================
